# c-call-rust-onnx-infer

./: .gitignore  README.md  genOnnx.py  simple_model.onnx
c-call/: CMakeLists.txt  build.sh  c-call.c  ctest
rust-wrapper/: Cargo.toml
rust-wrapper/src/: lib.rs  main.bak.rs
