[package]
name = "rust_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ndarray = "0.15.6"
ort = "2.0.0-alpha.4"
rand = "0.8.5"
serde_json = "1.0.107"

[lib]
name = "rust_wrapper"
path = "src/lib.rs"
crate-type = ["cdylib"]
